# docs/swagger.json
@@ -108,7 +108,7 @@
         },
         "/api/v1/auth/register": {
             "post": {
-                "description": "Create a new user account with the provided details",
+                "description": "Create a new user account with the provided details and the secret",
                 "consumes": [
                     "application/json"
                 ],
@@ -191,7 +191,7 @@
                 "tags": [
                     "events"
                 ],
-                "summary": "Create a new event",
+                "summary": "Create a new event ** Auth Required **",
                 "parameters": [
                     {
                         "description": "Event data",
@@ -267,7 +267,7 @@
                 "tags": [
                     "events"
                 ],
-                "summary": "Update an existing event",
+                "summary": "Update an existing event ** Auth Required **",
                 "parameters": [
                     {
                         "type": "integer",
@@ -324,7 +324,7 @@
                 "tags": [
                     "events"
                 ],
-                "summary": "Delete an event",
+                "summary": "Delete an event ** Auth Required **",
                 "parameters": [
                     {
                         "type": "integer",
@@ -554,7 +554,7 @@
                 "tags": [
                     "riders"
                 ],
-                "summary": "Create a new rider",
+                "summary": "Create a new rider ** Auth Required **",
                 "parameters": [
                     {
                         "description": "Rider data",
@@ -645,7 +645,7 @@
                 "tags": [
                     "riders"
                 ],
-                "summary": "Update a rider",
+                "summary": "Update a rider ** Auth Required **",
                 "parameters": [
                     {
                         "type": "integer",
@@ -696,7 +696,7 @@
                 "tags": [
                     "riders"
                 ],
-                "summary": "Delete a rider",
+                "summary": "Delete a rider ** Auth Required **",
                 "parameters": [
                     {
                         "type": "integer",
@@ -779,7 +779,8 @@
             "required": [
                 "firstName",
                 "lastName",
-                "number"
+                "number",
+                "ownerId"
             ],
             "properties": {
                 "bikeBrand": {
@@ -809,6 +810,9 @@
                     "type": "string"
                 },
                 "number": {
+                    "type": "integer"
+                },
+                "ownerId": {
                     "type": "integer"
                 },
                 "status": {
@@ -866,7 +870,8 @@
             "required": [
                 "email",
                 "name",
-                "password"
+                "password",
+                "secret"
             ],
             "properties": {
                 "email": {
@@ -879,6 +884,9 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
+                },
+                "secret": {
+                    "type": "string"
                 }
             }
         }
